# general_python_projects

./: README.md  pyproject.toml
02_coffee_machine_oop/: main.py
03_turtles/: main.py
04. Snake/: main.py
05. Pong/: ball.py
06_us_states_game/: lesson.py
07. Turtle Crossing/: main.py  player.py
08. NATO phonetic alphabet/: links.txt
09_birthday_email_sender/: birthdays.csv
10. Weather alert sms/: main.py
11. Stock Trading News Alert/: main.py
12_workout_tracking_google_sheets/: main.py
13. Captstone pt. 1 - Flight Deal Finder/: data_manager.py  flight_data.py  flight_search.py  main.py  notification_manager.py
13_flight_tracker/: data_manager.py  flight_data.py  main.py  notification_manager.py
1_coffee_machine/: CoffeeMachine.py
3_turtles/: hirst_painting.py
4. Snake/: food.py  scoreboard.py  snake_class.py
5_pong/: main.py  paddles.py
6. US States game/: labels.py  main.py
6_us_states_game/: squirrels.py
7. Turtle Crossing/: car_manager.py  scoreboard.py
8. NATO phonetic alphabet/: main.py
9. Birthday email sender/: birthday.py  main.py
9. Birthday email sender/letter_templates/: letter_1.txt  letter_3.txt
9_birthday_email_sender/: emails.txt
9_birthday_email_sender/letter_templates/: letter_2.txt
django/: pyproject.toml
django/demo/demo/: settings.py
django/demo/myapp/: views.py
flight_tracker/: flight_search.py
