[tool.poetry]
name = "general-python-projects"
version = "0.1.0"
description = ""
authors = ["Marc Soler <msolerjosa@gmail.com>"]
readme = "README.md"
packages = [{include = "general_python_projects"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
Django = "^4.2.6"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
