[tool.poetry]
name = "general-python-projects"
version = "0.1.0"
description = ""
authors = ["Marc Soler <msolerjosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
plotly = "^5.18.0"
requests = "^2.31.0"
Django = "^5.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
