[tool.poetry]
name = "django_demo"
version = "0.1.0"
description = ""
authors = ["Marc Soler <msolerjosa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
pandas = "^2.1.0"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
